<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="0dp">
    <EditText
        android:id="@+id/sensor_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="5dp"
        android:autofillHints=""
        android:hint="@string/sensor_name"
        android:inputType="text|textNoSuggestions" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/sensor_enable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:hint="@string/sensor_enable"
            android:textColorHint="@android:color/black" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="0dp"
            android:text="@string/mosaic_sensor_grid"
            android:textColor="@android:color/black" />
        <EditText
            android:id="@+id/rows_number"
            android:layout_width="28dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="5dp"
            android:autofillHints=""
            android:hint=""
            android:inputType="number"
            android:maxLength="2"
            tools:ignore="LabelFor" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="5dp"
            android:text="@string/mosaic_sensor_grid_separator"
            android:textColor="@android:color/black" />
        <EditText
            android:id="@+id/cols_number"
            android:layout_width="28dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="5dp"
            android:autofillHints=""
            android:hint=""
            android:inputType="number"
            android:maxLength="2"
            tools:ignore="LabelFor" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/mosaic_sensor_color"
            android:textColor="@android:color/black" />
        <ImageView
            android:id="@+id/mosaic_sensor_color"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/mosaic_sensor_color_picker" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:labelFor="@+id/sensor_image"
        android:text="@string/sensor_value"
        android:textColor="@android:color/black"
        android:textSize="16sp" />
    <ImageView
        android:id="@id/sensor_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/mosaic_sensor_surface" />
</LinearLayout>
